# ACME_perception_proposal

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.metadata/: version.ini
app/: CMakeLists.txt  Detection.cpp  HumanDetector.cpp  LabelParser.cpp  ParamParser.cpp  PositionEstimator.cpp  VisionAPI.cpp  main.cpp  params_vec.cpp  utils.cpp
code-check-results/: code_coverage.txt  cppcheck.txt  cpplint .txt  unit_tests.txt  valgrind.txt
dataset/1/: label_imgs.py
dataset/labels/: 1_231.txt  1_232.txt  1_235.txt  1_236.txt  1_237.txt  1_238.txt  1_241.txt  1_242.txt  1_243.txt  1_245.txt  1_246.txt  1_249.txt  1_252.txt  1_253.txt  1_255.txt  1_256.txt  1_257.txt  1_258.txt  1_262.txt  1_265.txt  1_266.txt  1_267.txt  1_268.txt  1_269.txt  1_270.txt  1_271.txt  1_273.txt  1_274.txt  1_276.txt  1_277.txt  1_278.txt  1_280.txt  1_281.txt  1_282.txt  1_283.txt  1_284.txt  1_288.txt  1_289.txt  1_291.txt  1_292.txt  (+134 more)
docs/: Doxyfile
docs/html/: _detection_8hpp.html  _detection_8hpp__dep__incl.map  _detection_8hpp__dep__incl.md5  _detection_8hpp_source.html  _human_detector_8cpp.html  _human_detector_8cpp__incl.map  _human_detector_8cpp__incl.md5  _human_detector_8hpp.html  _human_detector_8hpp__dep__incl.map  _human_detector_8hpp__dep__incl.md5  _human_detector_8hpp__incl.map  _human_detector_8hpp__incl.md5  _human_detector_8hpp_source.html  _label_parser_8hpp.html  _label_parser_8hpp__incl.map  _label_parser_8hpp__incl.md5  _label_parser_8hpp_source.html  _param_parser_8cpp.html  _param_parser_8cpp__incl.map  _param_parser_8cpp__incl.md5  _param_parser_8hpp.html  _param_parser_8hpp__dep__incl.map  _param_parser_8hpp__dep__incl.md5  _param_parser_8hpp__incl.map  _param_parser_8hpp__incl.md5  _param_parser_8hpp_source.html  _position_estimator_8cpp.html  _position_estimator_8cpp__incl.map  _position_estimator_8cpp__incl.md5  _position_estimator_8hpp.html  _position_estimator_8hpp__dep__incl.map  _position_estimator_8hpp__dep__incl.md5  _position_estimator_8hpp__incl.map  _position_estimator_8hpp__incl.md5  _position_estimator_8hpp_source.html  _vision_a_p_i_8cpp.html  _vision_a_p_i_8cpp__incl.map  _vision_a_p_i_8cpp__incl.md5  _vision_a_p_i_8hpp.html  _vision_a_p_i_8hpp__incl.map  (+70 more)
docs/latex/: _detection_8hpp.tex  _detection_8hpp__dep__incl.md5  annotated.tex  (+45 more)
include/: Detection.hpp  HumanDetector.hpp  LabelParser.hpp  ParamParser.hpp  PositionEstimator.hpp  VisionAPI.hpp  params_vec.hpp  utils.hpp
robot_params/: robot_params.txt
test/: CMakeLists.txt  HumanDetectorTests.cpp  ParamParserTests.cpp  PositionEstimatorTests.cpp  main.cpp  robot_params_test.txt
test/robot_params_textfiles/: UnitEq.txt  UnitNotAllowed.txt  VarVectorMismatch.txt  VariousInvalidInputs.txt  position_estimator_params_test.txt
visual_reps/: activity_and_UML.drawio
(+49 files in other folders)
